[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "T. E. Kalayci"},
]
license = {text = "GPL-3.0-or-later"}
name = "pocket-converter"
version = "0.1.0"
description = "Simple project to convert Pocket export to bookmarks format"

requires-python = ">=3.12"
dependencies = [
"beautifulsoup4"
]
